2022-05-27  Enrico Schumann  <es@enricoschumann.net>

	* R/functions.R (prev_bday, previous_businessday):
	argument 'holidays' is now supported
	(next_bday, next_businessday):
	argument 'holidays' is now supported

2021-07-25  Enrico Schumann  <es@enricoschumann.net>

	* R/functions.R (date1904): add function

2021-07-24  Enrico Schumann  <es@enricoschumann.net>

	* R/functions.R (convert_date): add type
	"excel1904", for Excel files with origin 1904-01-01

2021-05-27  Enrico Schumann  <es@enricoschumann.net>

        * NAMESPACE: export 'hour', 'minute' and 'second'

2021-05-04  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R (guess_datetime): patterns in
        some cases required that a day be a two-digit
        number; now a single digit suffices. Example:

        ## old
        guess_datetime("3.5.2021", date.only = TRUE)
        ## [1] NA

        ## new
        guess_datetime("3.5.2021", date.only = TRUE)
        ## "2021-05-03"

2021-04-01  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.5-0

2021-03-17  Enrico Schumann  <es@enricoschumann.net>

        * man/guess_datetime.Rd: remove reference
        to 'anytime' to avoid check-note

2021-02-24  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R (guess_datetime): new argument
        'try.patterns'

        * data/tznames.txt: update timezone names;
        remove duplicates

2021-02-11  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Suggests): add 'tinytest'

        * R/functions.R (guess_datetime): use more
        explicit quantifiers
        (guess_datetime): fix use of 'tz' argument,
        which had been ignored

2020-09-03  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R (hour, minute, second): add
        functions

2020-03-25  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.4-0

2020-02-21  Enrico Schumann  <es@enricoschumann.net>
